# --------------

./: .gitignore  Makefile  PPT汇报.md  README.md  pyproject.toml  voice_processing_data_20251102_101858.npz  voice_processing_data_20251102_112132.npz  voice_processing_data_20251102_135116.npz  语音信号处理课设.docx  课程设计论文.md  项目总结.md
docs/: conf.py  index.rst  常见问题.md  开发指南.md  架构说明.md  算法说明.md
docs/api/: audio_source.rst  config.rst  index.rst  runtime_engine.rst  signal_processing.rst  ui_visualization.rst
real_time_voice_processing/: Makefile  PPT汇报.md  README.md  __init__.py  analyze_file.py  config.py  demo.py  main.py  requirements.txt  signal_processing.py  test_system.py  课程设计论文.md
real_time_voice_processing/assets/audio_tests/: .gitkeep  但是太阳它每时每刻.m4a  未命名录音 9.m4a
real_time_voice_processing/runtime/: audio_source.py  engine.py
real_time_voice_processing/signal_processing/: vad.py
real_time_voice_processing/ui/: controls.py  file_utils.py  handlers.py  styles.py  visualization.py
scripts/: setup_venv.ps1
tests/: test_runtime_engine.py  test_signal_processing.py
